# fluers

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  justfile
.github/workflows/: ci.yml  release.yml
crates/fluers-cli/: Cargo.toml
crates/fluers-cli/src/: agent_config.rs  commands.rs  config.rs  main.rs
crates/fluers-core/: Cargo.toml
crates/fluers-core/src/: error.rs  event.rs  lib.rs  message.rs  message_tests.rs  model.rs  policy.rs  request.rs  runner.rs  subagent.rs  thinking.rs  tool.rs
crates/fluers-mcp/: Cargo.toml
crates/fluers-mcp/src/: lib.rs
crates/fluers-mcp/tests/: mcp_integration.rs
crates/fluers-memory/: Cargo.toml
crates/fluers-memory/src/: lib.rs  mem0.rs  sink.rs
crates/fluers-otel/: Cargo.toml
crates/fluers-otel/src/: lib.rs
crates/fluers-postgres/: Cargo.toml
crates/fluers-postgres/src/: lib.rs
crates/fluers-protocol/: Cargo.toml
crates/fluers-protocol/src/: lib.rs
crates/fluers-providers/: Cargo.toml
crates/fluers-providers/src/: lib.rs  openai_compatible.rs
crates/fluers-runtime/: Cargo.toml
crates/fluers-runtime/src/: agent.rs  env.rs  error.rs  event.rs  json_file_adapter.rs  lib.rs  local_env.rs  persistence.rs  runner.rs  sandbox.rs  session.rs  skill.rs  skill_tests.rs  tool.rs
crates/fluers-sdk/: Cargo.toml
crates/fluers-sdk/src/: lib.rs
crates/fluers-server/: Cargo.toml
crates/fluers-server/src/: lib.rs  state.rs
docs/: ARCHITECTURE.md  CONFIG_UX_DESIGN.md  DEV_CONFIG_UX_DESIGN.md  MVP35_BUILD_DEPLOY_DESIGN.md  MVP4_MCP_DESIGN.md  MVP4_MEMORY_DESIGN.md  MVP4_OTEL_DESIGN.md  MVP4_PLAN.md  MVP4_SUBAGENTS_DESIGN.md  PORTING_PLAN.md
