[workspace]
resolver = "2"
members = [
    "crates/fluers-core",
    "crates/fluers-runtime",
    "crates/fluers-providers",
    "crates/fluers-cli",
    "crates/fluers-sdk",
    "crates/fluers-mcp",
    "crates/fluers-postgres",
    "crates/fluers-otel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "Apache-2.0"
repository = "https://github.com/saorsa-labs/fluers"
homepage = "https://github.com/saorsa-labs/fluers"
authors = ["Saorsa Labs"]
description = "Fluers — a native Rust port of the Flue agent harness framework"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Panic-free production code (project standard).
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Schema / validation
schemars = "1"
# Full JSON-Schema validation (used once tool schemas exceed required-only checks).
jsonschema = "0.22"

# Cancellation / async utilities
tokio-util = "0.7"

# Base64 for image attachments (replaces hand-rolled codec).
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server (Flue uses Hono; Rust uses axum)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"

# HTTP client (model providers, MCP)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Sandbox / process
nix = { version = "0.29", features = ["signal", "process"] }

# Utilities
proptest = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
bytes = "1"
parking_lot = "0.12"

# Internal crates
fluers-core = { path = "crates/fluers-core", version = "0.1.0" }
fluers-runtime = { path = "crates/fluers-runtime", version = "0.1.0" }
fluers-providers = { path = "crates/fluers-providers", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
