[workspace]
resolver = "2"
members = [
    "crates/fluers-core",
    "crates/fluers-runtime",
    "crates/fluers-providers",
    "crates/fluers-protocol",
    "crates/fluers-server",
    "crates/fluers-cli",
    "crates/fluers-sdk",
    "crates/fluers-mcp",
    "crates/fluers-postgres",
    "crates/fluers-memory",
    "crates/fluers-otel",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saorsa-labs/fluers"
homepage = "https://github.com/saorsa-labs/fluers"
authors = ["Saorsa Labs"]
description = "Fluers — a native Rust port of the Flue agent harness framework"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
# Panic-free production code (project standard).
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Schema / validation
schemars = "1"
# Full JSON-Schema validation (used once tool schemas exceed required-only checks).
jsonschema = "0.22"

# Cancellation / async utilities
tokio-util = "0.7"
async-stream = "0.3"

# Base64 for image attachments (replaces hand-rolled codec).
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# HTTP server (Flue uses Hono; Rust uses axum)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"

# HTTP client (model providers, MCP)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Model Context Protocol client (fluers-mcp) — official Rust SDK
rmcp = { version = "1.8", default-features = false, features = ["client", "transport-child-process"] }

# Sandbox / process
nix = { version = "0.29", features = ["signal", "process"] }
# Safe fd-anchored filesystem ops for `fluers-runtime` reads (`openat`, `fstat`,
# `OFlags`) — returns `OwnedFd`/`Stat` directly, so no `unsafe` (the crate is
# `#![forbid(unsafe_code)]`, which rules out `nix`'s `RawFd`-returning API).
# Already a transitive dep via tokio, so this adds no build weight.
rustix = { version = "1.0", features = ["fs"] }

# Postgres persistence (fluers-postgres)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }

# Utilities
proptest = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
bytes = "1"
parking_lot = "0.12"
tempfile = "3"

# Internal crates
fluers-core = { path = "crates/fluers-core", version = "0.4.0" }
fluers-runtime = { path = "crates/fluers-runtime", version = "0.4.0" }
fluers-providers = { path = "crates/fluers-providers", version = "0.4.0" }
fluers-protocol = { path = "crates/fluers-protocol", version = "0.4.0" }
fluers-server = { path = "crates/fluers-server", version = "0.4.0" }
fluers-postgres = { path = "crates/fluers-postgres", version = "0.4.0" }
fluers-memory = { path = "crates/fluers-memory", version = "0.4.0" }
fluers-otel = { path = "crates/fluers-otel", version = "0.4.0" }
fluers-mcp = { path = "crates/fluers-mcp", version = "0.4.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
