[package]
name = "fluers-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core agent primitives and model abstractions for Fluers (port of pi-agent-core + pi-ai)"
keywords = ["agent", "llm", "ai", "harness"]
categories = ["science", "api-bindings"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
bytes.workspace = true
futures.workspace = true
base64.workspace = true

[dev-dependencies]
# proptest is test-only (used solely by the #![cfg(test)] message_tests module);
# kept out of [dependencies] so it does not leak into consumers' production trees.
proptest.workspace = true
