[package]
name = "fluers-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Semantic long-term memory (mem0) layer for Fluers agents"

[lints]
workspace = true

[dependencies]
fluers-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio.workspace = true
