[package]
name = "fluers-otel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenTelemetry tracing adapter for Fluers"
publish = false

[lints]
workspace = true

[dependencies]
fluers-core.workspace = true
fluers-runtime.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tracing.workspace = true
tokio.workspace = true
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = ["http-proto"] }
uuid.workspace = true

[dev-dependencies]
# No OTLP collector needed for tests.
