[package]
name = "fluers-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Postgres persistence adapter for Fluers sessions"
publish = false

[lints]
workspace = true

[dependencies]
fluers-runtime.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
sqlx.workspace = true

[dev-dependencies]
uuid.workspace = true
fluers-core.workspace = true
