[package]
name = "fluers-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model providers for Fluers (OpenAI-compatible: OpenRouter, MiniMax, local)"

[lints]
workspace = true

[dependencies]
fluers-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
