[package]
name = "fluers-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Client SDK for consuming deployed Fluers agents and workflows"
publish = false

[lints]
workspace = true

[dependencies]
fluers-core.workspace = true
fluers-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
uuid.workspace = true
